--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,35 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #222,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222222,
+  facebook:   #3a589b,
+  twitter:    #55acef,
+  google:     #dc4e42,
+  color1:        #F44336,
+  color2:        #673AB7,
+  color3:        #03A9F4,
+  color4:        #4CAF50,
+  color5:        #FFEB3B,
+  color6:        #FF5722,
+  color7:        #607D8B,
+  color8:        #E91E63,
+  color9:        #3F51B5,
+  color10:        #00BCD4,
+  color11:        #8BC34A,
+  color12:        #FFC107,
+  color13:        #795548,
+  color14:        #9C27B0,
+  color15:        #2196F3,
+  color16:        #009688,
+  color17:        #CDDC39,
+  color18:        #FF9800,
+  color19:        #9E9E9E,
+
+
 );
 
 
